--- a/_posts/2013-06-30-holzbau.md
+++ b/_posts/2013-06-30-holzbau.md
@@ -2,7 +2,7 @@
 layout: page
 title: "Holzbau Video"
 date: 2013-06-30
-image: http://doeberl.at/cv/images/Holzbau.png
+image: /images/proj-holzbau.png
 ---
 
 some test blog post with **markdown**, oh *fancy*
