--- a/_posts/2014-06-30-pong.md
+++ b/_posts/2014-06-30-pong.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: pong
+title: codepong
 date: 2016-06-30
-image: http://doeberl.at/cv/images/codepong.png
+image: /images/proj-codepong.png
 ---
 
 some test blog post with **markdown**, oh *fancy*
