--- a/_posts/2014-06-30-statik.md
+++ b/_posts/2014-06-30-statik.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: statik
+title: statik.co
 date: 2016-06-30
-image: http://doeberl.at/cv/images/statik-co.png
+image: /images/proj-statik.png
 ---
 
 some test blog post with **markdown**, oh *fancy*
