--- a/_posts/2016-06-30-bimlights2.md
+++ b/_posts/2016-06-30-bimlights2.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: BimLights2
+title: bimlights2
 date: 2016-06-30
-image: http://files.doebi.at/temp/YNMPIHpT/
+image: /images/proj-bimlights2.png
 ---
 
 some test blog post with **markdown**, oh *fancy*
