--- a/_posts/2012-06-30-holzbau.md
+++ b/_posts/2012-06-30-holzbau.md
@@ -8,8 +8,9 @@ image: /images/proj-holzbau.png
 As a diploma project on HTL 1 Bau und Design we created a short animation about the creation of a timber-constructed house.
 The movie explains the process of the creation from beginning to finalisation.
 
-<iframe src="https://player.vimeo.com/video/63764399" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/63764399">Elementarer Holzbau</a> from <a href="https://vimeo.com/user9910315">doebi</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<div class="video-wrapper">
+<iframe class="video" src="https://player.vimeo.com/video/63764399?color=50a162&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
 
 ### Software used
 * modelled in ArchiCAD
