--- a/_posts/2016-06-30-craftui.md
+++ b/_posts/2016-06-30-craftui.md
@@ -5,8 +5,5 @@ date: 2015-09-30
 image: /images/proj-craftui.png
 ---
 
-some test blog post with **markdown**, oh *fancy*
-TODO:
-* post-Template
-* useful content
-* more content
+[CraftUI](https://doebi.github.io/craftui/) lets you create touch interfaces on physical surfaces and was initially developed for glass surfaces like public show windows. While this is a very basic concept, we believe that CraftUI distinguishes itself from many other multi touch technologies in a way that it is a much more practical solution for many applications.
+
