--- a/_posts/2016-01-10-espthing.md
+++ b/_posts/2016-01-10-espthing.md
@@ -4,3 +4,9 @@ title: ESPThing
 date: 2016-01-10
 image: /images/proj-placeholder.png
 ---
+
+## projects realised using espthing
+* watergun
+* ledhead
+* discoball
+* bernd das brett
