adding description to all posts

--- a/_posts/2013-08-23-statik.md
+++ b/_posts/2013-08-23-statik.md
@@ -3,6 +3,7 @@ layout: page
 title: statik.co
 date: 2013-08-23
 image: /images/proj-statik.png
+description: "web platform for structural analysis and calculation of beam structures"
 ---
 
 [statik.co](http://statik.co/) is a web platform for structural analysis and calculation of timber-framed constructions. Two-dimensional trusses can be created using the interactive HTML5 webinterface powered by JavaScript. A server saves the data in the database and handles the mathematical calculations. The Django backend passes the heavy operations to efficient and optimized Fortran code. Backbone.js is used on the Client for Communication to the Server's REST-API.
