--- a/_posts/2014-02-24-files.md
+++ b/_posts/2014-02-24-files.md
@@ -3,4 +3,5 @@ layout: page
 title: files.doebi.at
 date: 2014-02-24
 image: /images/proj-placeholder.png
+description: "platform for instant file sharing, directly from the command line"
 ---
