--- a/_posts/2016-01-10-espthing.md
+++ b/_posts/2016-01-10-espthing.md
@@ -3,6 +3,7 @@ layout: page
 title: ESPThing
 date: 2016-01-10
 image: /images/proj-placeholder.png
+description: "boilerplate for IoT projects using the ESP8266 chip and MQTT for communication"
 ---
 
 ## projects realised using espthing
