--- a/_posts/2016-06-30-bimlights2.md
+++ b/_posts/2016-06-30-bimlights2.md
@@ -3,5 +3,6 @@ layout: page
 title: bimlights2
 date: 2016-06-30
 image: /images/proj-bimlights2.png
+description: "smaller but more advanced version of bimlights"
 ---
 
