--- a/_posts/2012-06-30-holzbau.md
+++ b/_posts/2012-06-30-holzbau.md
@@ -3,6 +3,7 @@ layout: page
 title: "Holzbau Video"
 date: 2012-06-30
 image: /images/proj-holzbau.png
+description: "animation movie about the creation of a timber-constructed house"
 ---
 
 As a diploma project on HTL 1 Bau und Design we created a short animation about the creation of a timber-constructed house.
