--- a/_posts/2014-01-28-codepong.md
+++ b/_posts/2014-01-28-codepong.md
@@ -3,4 +3,5 @@ layout: page
 title: codepong
 date: 2014-01-28
 image: /images/proj-codepong.png
+description: "revival of the pong game using barcode handscanners as controllers"
 ---
