--- a/_posts/2012-06-30-holzbau.md
+++ b/_posts/2012-06-30-holzbau.md
@@ -5,8 +5,7 @@ date: 2012-06-30
 image: /images/proj-holzbau.png
 description: "animation movie about the creation of a timber-constructed house"
 ---
-
-As a diploma project on HTL 1 Bau und Design we created a short animation about the creation of a timber-constructed house.
+As a diploma project on *HTL 1 Bau und Design* we created a short animation about the creation of a timber-constructed house.
 The movie explains the process of the creation from beginning to finalisation.
 
 <div class="video-wrapper">
