added TODO to each empty post

--- a/_posts/2014-01-28-codepong.md
+++ b/_posts/2014-01-28-codepong.md
@@ -5,3 +5,5 @@ date: 2014-01-28
 image: /images/proj-codepong.png
 description: "revival of the game pong using barcode handscanners as controllers"
 ---
+
+TODO
