--- a/_posts/2016-01-10-espthing.md
+++ b/_posts/2016-01-10-espthing.md
@@ -6,7 +6,7 @@ image: /images/proj-placeholder.png
 description: "boilerplate for IoT projects using the ESP8266 chip and MQTT"
 ---
 
-## projects realised using espthing
+## projects using espthing
 * watergun
 * ledhead
 * discoball
