some bimlights text

--- a/_posts/2016-06-30-bimlights2.md
+++ b/_posts/2016-06-30-bimlights2.md
@@ -6,4 +6,8 @@ image: /images/proj-bimlights2.png
 description: "smaller but more advanced version of bimlights"
 ---
 
-TODO
+**bimlights2** is the continuation of [bimlights](/projects/bimlights/).
+Instead of the full tram network, this one only shows a smaller area around the center of Linz
+
+Because the first version of bimlights got bricked at the Ars Electronica Festival in 2015 I wanted to create a new, but more robust version of it.
+During a last-minute hack on the power supply the LEDs and the controller must have caught too much voltage and said good bye.
