added image gallery

--- a/_posts/2016-06-30-bimlights2.md
+++ b/_posts/2016-06-30-bimlights2.md
@@ -4,10 +4,18 @@ title: bimlights2
 date: 2016-06-30
 image: /images/proj-bimlights2.png
 description: "smaller but more advanced version of bimlights"
+images: [pcb-layout, pcb-solder, lazzor,  assembly, finished]
 ---
 
 **bimlights2** is the continuation of [bimlights](/projects/bimlights/).
 Instead of the full tram network, this one only shows a smaller area around the center of Linz
 
+{% if foo %}
 Because the first version of bimlights got bricked at the Ars Electronica Festival in 2015 I wanted to create a new, but more robust version of it.
 During a last-minute hack on the power supply the LEDs and the controller must have caught too much voltage and said good bye.
+
+I wanted to use the WS2812 on the new one, so I had to design a PCB to get them assembled.
+Some cardboard is used to adjust an even surface and stick a printed map on to.
+
+Packed into a small frame this makes a fancy little gadget, not easily disclosing its internet-conectivity, when turned off.
+{% endif %}
