--- a/_posts/2015-09-15-watergun.md
+++ b/_posts/2015-09-15-watergun.md
@@ -3,7 +3,7 @@ layout: page
 title: watergun
 date: 2015-09-15
 image: /images/proj-placeholder.png
-description: "a watergun with wifi"
+description: "a watergun with wifi for hosting and controlling a browsergame"
 ---
 
 TODO
