bimlights color codes

--- a/_posts/2016-06-30-bimlights2.md
+++ b/_posts/2016-06-30-bimlights2.md
@@ -8,7 +8,7 @@ images: [pcb-layout, pcb-solder, lazzor,  assembly, finished]
 ---
 
 **bimlights2** is the continuation of [bimlights](/projects/bimlights/).
-Instead of the full tram network, this one only shows a smaller area around the center of Linz
+Instead of the full tram network, this one only shows a smaller area around the center of Linz.
 
 {% if foo %}
 Because the first version of bimlights got bricked at the Ars Electronica Festival in 2015 I wanted to create a new, but more robust version of it.
