added github links

--- a/_posts/2014-02-24-files.md
+++ b/_posts/2014-02-24-files.md
@@ -4,6 +4,7 @@ title: files.doebi.at
 date: 2014-02-24
 image: /images/proj-placeholder.png
 description: "platform for instant file sharing, directly from the command line"
+github: "//github.com/doebi/files"
 ---
 
 TODO
