changed github link

--- a/_posts/2015-09-15-watergun.md
+++ b/_posts/2015-09-15-watergun.md
@@ -4,7 +4,7 @@ title: watergun
 date: 2015-09-15
 image: /images/proj-placeholder.png
 description: "a watergun with wifi for hosting and controlling a browsergame"
-github: "//github.com/doebi/watergun"
+github: "doebi/watergun"
 ---
 
 TODO
