--- a/_posts/2016-01-10-espthing.md
+++ b/_posts/2016-01-10-espthing.md
@@ -4,7 +4,7 @@ title: ESPThing
 date: 2016-01-10
 image: /images/proj-placeholder.png
 description: "boilerplate for IoT projects using the ESP8266 chip and MQTT"
-github: "//github.com/doebi/espthing"
+github: "doebi/espthing"
 ---
 
 ### An IoT Boilerplate for ESP
