--- a/_posts/2016-05-17-mqttcd.md
+++ b/_posts/2016-05-17-mqttcd.md
@@ -4,7 +4,7 @@ title: MQTTCD
 date: 2016-05-17
 image: /images/proj-placeholder.png
 description: "MQTT Client running as daemon and notifying about messages"
-github: "//github.com/doebi/mqttcd"
+github: "doebi/mqttcd"
 ---
 
 TODO
