--- a/_posts/2016-01-10-espthing.md
+++ b/_posts/2016-01-10-espthing.md
@@ -24,8 +24,7 @@ In this small exmaple we define an Input **ping** and an Output **pong**.
 When we receive a message on topic ping, we send a reply on topic pong.
 And a **heartbeat** is send every 3 minutes.
 
-```arduino
-
+{% highlight C %}
 bool ping = false;
 String ping_msg = "";
 
@@ -54,15 +53,15 @@ void setup() {
 void loop() {
     Thing.loop();
 }
-```
+{% endhighlight %}
 
 The topics for this example would be:
 
-```
+{% highlight MQTT %}
 domain/FF:FF:FF:FF:FF:FF/ping
 domain/FF:FF:FF:FF:FF:FF/pong
 domain/FF:FF:FF:FF:FF:FF/heartbeat
-```
+{% endhighlight %}
 
 ### Reconfiguration
 If the ESP is unable to connect to one of it's configured APs it falls back to AP Mode. The user can then connect to the AP and reconfigure settings. [this feature is not yet implemented]
@@ -74,7 +73,7 @@ If the ESP is unable to connect to one of it's configured APs it falls back to A
 Each thing gets a unique MQTT Topic Base consisting of a domain and the ESP's MAC
 Every Input and Output's topic gets appended to this base.
 
-```
+{% highlight MQTT %}
 <DOMAIN>/<MAC>/status    online|offline
 <DOMAIN>/<MAC>/<name>    <message>
-```
+{% endhighlight %}
