--- a/_posts/2016-01-10-espthing.md
+++ b/_posts/2016-01-10-espthing.md
@@ -22,7 +22,7 @@ Optionally you can add a third parameter to the Output class. An interval in mil
 ### Example
 In this small exmaple we define an Input **ping** and an Output **pong**.
 When we receive a message on topic ping, we send a reply on topic pong.
-And a **heartbeat** is send every 3 minutes.
+And a **heartbeat** is sent every 3 minutes.
 
 {% highlight C %}
 bool ping = false;
