adding images to watergun

--- a/_posts/2015-09-15-watergun.md
+++ b/_posts/2015-09-15-watergun.md
@@ -2,9 +2,11 @@
 layout: page
 title: watergun
 date: 2015-09-15
-image: /images/proj-placeholder.png
+image: /images/proj-watergun.png
 description: "a watergun with wifi for hosting and controlling a browsergame"
 github: "doebi/watergun"
 ---
 
-TODO
+<div class="img-responsive">
+<img src="/photos/watergun/header.png" />
+</div>
