--- a/_posts/2015-09-15-watergun.md
+++ b/_posts/2015-09-15-watergun.md
@@ -7,6 +7,11 @@ description: "a watergun with wifi for hosting and controlling a browsergame"
 github: "doebi/watergun"
 ---
 
+The ESP8266 is an incredibly cheap and yet powerful microcontroller with Wi-Fi being its most famous feature.
+From this specs I have born the idea of creating a self-contained browsergame.
+Meaning that the chip is serving a website containing a browsergame, while also acting as a physical controller for the game.
+The only thing needed in addition is a Wi-Fi enabled device for running and displaying the game, which sits in every persons pocket.
+
 <div class="img-responsive">
 <img src="/photos/watergun/header.png" />
 </div>
