blano alt attributes for w3c compliance

--- a/_posts/2015-09-15-watergun.md
+++ b/_posts/2015-09-15-watergun.md
@@ -13,5 +13,5 @@ Meaning that the chip is serving a website containing a browsergame, while also 
 The only thing needed in addition is a Wi-Fi enabled device for running and displaying the game, which sits in every persons pocket.
 
 <div class="img-responsive">
-<img src="/photos/watergun/header.png" />
+<img alt="" src="/photos/watergun/header.png" />
 </div>
