added image for files

--- a/_posts/2014-02-24-files.md
+++ b/_posts/2014-02-24-files.md
@@ -2,7 +2,7 @@
 layout: page
 title: files.doebi.at
 date: 2014-02-24
-image: /images/proj-placeholder.png
+image: /images/proj-files.png
 description: "platform for instant file sharing, directly from the command line"
 github: "doebi/files"
 ---
