more content and images for sha post

--- a/_posts/2017-08-04-sha2017.md
+++ b/_posts/2017-08-04-sha2017.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-title: SHA2017
+title: "SHA2017"
 date: 2017-08-04
 image: /images/proj-sha2017.gif
 description: "App Development for the SHA2017 Badge"
 github: "doebi/sha2017-weatherapp"
+images: ["weatherapp", "winkekatze", "badge", "badges"]
 ---
 
 ### A Weatherapp for the SHA2017 Badge
@@ -12,7 +13,7 @@ github: "doebi/sha2017-weatherapp"
 In preparation for the camp, i did some app development for the badge.
 The result was a simple weather app, that shows the weather for the next 24 hours in 6 hour steps.
 
-<div class="img-responsive">
+<div style="text-align: center">
 <img alt="" src="/photos/sha2017/emulator.png" />
 </div>
 
@@ -22,11 +23,8 @@ The most tricky party were the condition icons, for which I created a custom fon
 Apparently this app was the first one created by someone outside the badge team.
 I actually did this app as a warm-up task for more sophisticated apps, which I never got to finish. :/
 
-<div class="img-responsive">
-<img alt="" src="/photos/sha2017/weatherapp.jpg" />
-</div>
-
 
 ### Winkekatze goes SHA2017
 
-
+Our /dev/lol-Winkekatze known from previous camps and other CCC related events, also went to SHA2017.
+[mik](https://github.com/powermik) created a Winkekatze-App for the Badge, where people can broadcast winks to all listening devices via MQTT. During the event we hacked and improved the app with numerous features.
