--- a/_posts/2017-08-04-sha2017.md
+++ b/_posts/2017-08-04-sha2017.md
@@ -23,8 +23,7 @@ The most tricky party were the condition icons, for which I created a custom fon
 Apparently this app was the first one created by someone outside the badge team.
 I actually did this app as a warm-up task for more sophisticated apps, which I never got to finish. :/
 
-
 ### Winkekatze goes SHA2017
 
-Our /dev/lol-Winkekatze known from previous camps and other CCC related events, also went to SHA2017.
+[aurel](https://github.com/aurelw) brought his Winkekatze, which is already known from previous camps and other CCC related events.
 [mik](https://github.com/powermik) created a Winkekatze-App for the Badge, where people can broadcast winks to all listening devices via MQTT. During the event we hacked and improved the app with numerous features.
