fixed gallery for statik

--- a/_posts/2013-08-23-statik.md
+++ b/_posts/2013-08-23-statik.md
@@ -4,7 +4,7 @@ title: statik.co
 date: 2013-08-23
 image: /images/proj-statik.png
 description: "web platform for structural analysis and calculation of beam structures"
-images: [1, 2, 3]
+images: [1.png, 2.png, 3.png]
 ---
 
 <img alt="" src="/photos/statik.co/header.png" />
