fixed gallery for sha17

--- a/_posts/2017-08-04-sha2017.md
+++ b/_posts/2017-08-04-sha2017.md
@@ -5,7 +5,7 @@ date: 2017-08-04
 image: /images/proj-sha2017.gif
 description: "App Development for the SHA2017 Badge"
 github: "doebi/sha2017-weatherapp"
-images: ["weatherapp", "winkekatze", "badge", "badges"]
+images: ["weatherapp.jpg", "winkekatze.jpg", "badge.jpg", "badges.jpg"]
 ---
 
 ### A Weatherapp for the SHA2017 Badge
