--- a/_posts/2017-07-12-ixopipes.md
+++ b/_posts/2017-07-12-ixopipes.md
@@ -7,7 +7,7 @@ description: "advanced interface for building conditional processes"
 ---
 
 Ixopipes is a Javascript Framework for building sophisticated conditional trees.
-By dragging **Actions** and **Conditions** from the sidebar one can freely define dependecies and consequences for various inputs.
+By dragging **Actions** and **Conditions** from the sidebar one can freely define dependencies and consequences for various inputs.
 
 <div style="text-align: center">
   <img alt="" src="/images/proj-ixopipes.png" />
